Revert "[fix] corrected view of menu and scrollbar"
This reverts commit 7a48aa1

--- a/modules/Base/Box/theme/default.css
+++ b/modules/Base/Box/theme/default.css
@@ -141,7 +141,7 @@ button, .buttons, .btn, .modal-footer .btn+.btn {
 
 .watchdog {
 	/*padding-top: 5rem;*/
-	padding: 0rem 1rem 0 2.3rem;
+	padding: 5rem 1rem 0 2.3rem;
 	background: #2A3F54;
 
 }
@@ -175,12 +175,5 @@ div.login > span > a > i {
 body.nav-md .container.body .col-md-3.left_col{
 	position: fixed;
 	height: 100%;
-}
-
-.left_col.scroll-view {
-	width: 100%;
 	overflow-y: scroll;
-	margin-top: 58px;
-	margin-bottom: 76px;
-	padding-top: 1rem;
 }
